--- a/broker.conf
+++ b/broker.conf
@@ -1,9 +1,11 @@
 brokerClusterName = DefaultCluster
 brokerName = broker-a
 brokerId = 0
+brokerIP1=rocketmq-broker
 deleteWhen = 04
 fileReservedTime = 48
 listenPort = 10911
 namesrvAddr = rocketmq-namesrv:9876
 brokerRole = ASYNC_MASTER
 flushDiskType = ASYNC_FLUSH
+autoCreateTopicEnable = true
