--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,39 @@
+server:
+  port: 9090
+  shutdown: graceful
+
 spring:
   application:
     name: demo
-
+  lifecycle:
+      timeout-per-shutdown-phase: 30s
 # define mysql properties here
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/taskdb?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: taskuser          # 替換為您的 docker-compose 設定
+    password: taskpass      # 替換為您的 docker-compose 設定
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none       # 開發環境可選，生產環境建議 none
+    show-sql: false
+    database-platform: org.hibernate.dialect.MySQLDialect
 # define redis properties here
-
+  data:
+    redis:
+      host: localhost
+      port: 6379
 # define rocketmq properties here
+rocketmq:
+  # 連接到 NameServer，這是 RocketMQ 發現服務的中心點
+  # hostname 必須是 docker-compose 服務名稱 (e.g., namesrv)
+  name-server: localhost:9876
+  producer:
+    group: SCHEDULER_PRODUCER_GROUP # 生產者組名
+    send-message-timeout: 10000
+
+
+task:
+  service: redis   # 當redis故障時 實作db 進行切換
+  schedule:
+    topic: task-schedule-topic
